--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,95 @@
-
-
-.karla-tela {
-  font-family: "Karla", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+body, html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #1C1C1C;
+  font-family: 'Karla', sans-serif;
 }
 
-
-.inter-h3 {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight:100;
-  font-style: normal;
+.fundo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 20px;
 }
 
-
-h1{
-    width:354px;
-    height:80px;
-    margin-left: 52px;
-    margin-top: 115px;
-    margin-bottom: 0px;
-   
-    padding-bottom: 15px;
-}
-h3{
-    margin-top: 2px;
-    margin-left: 55px;
-    height: 28px;
-    width:372px;
-    color:rgb(208, 206, 206);
-    font-weight:100;
-    font-size:20px;
-    font-family: Inter;
-    
+#tela {
+  background-color: #1F2937;
+  width: 100%;
+  max-width: 550px;
+  padding: 30px;
+  border: 4px solid rgb(159, 156, 156);
+  border-radius: 15px;
+  box-sizing: border-box;
 }
 
-
-
-.firsth{
-
-    font-family: "karla";
-    font-weight: bold;
-    font-size: 40px;
-    color: white;
-    margin-top: 115px;
-}
-.secondh{
-    font-family: "karla";
-    font-weight: bold;
-    font-size: 40px;
-    color: #4ADF86;
+h1 {
+  font-size: 32px;
+  margin: 0;
+  text-align: center;
+  color: white;
 }
 
-
-.fundo , body{
-
-    background-color: #1C1C1C;
-    background-size: cover;
-    height: 100vh ;
-    width: 100vw;
-    border: 0px;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-
+.secondh {
+  color: #4ADF86;
 }
 
-#tela{
-
-    background-color: #1F2937;
-    width: 550px;
-    height: 550px;
-    border:4px solid rgb(159, 156, 156);
-    border-radius: 15px;
-
+h3 {
+  font-family: 'Inter', sans-serif;
+  color: rgb(208, 206, 206);
+  font-weight: 100;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 10px;
 }
 
-#cta{
-    width:191px;
-    height: 42px;
-    background-color: #10B981;
-    padding-left: 15px;
-    padding-right: 17px;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    color: white;
-    font-family: "Inter";
-    font-size: 16px ;
-    font-weight: 300;
-    border-radius: 10px;
-    margin-left: 52px;
-    margin-top:52px;
+#cta {
+  display: block;
+  width: 100%;
+  max-width: 250px;
+  height: 42px;
+  margin: 30px auto 0;
+  background-color: #10B981;
+  color: white;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
 }
 
-.line{
-    border:1px solid #2F3E53;
-    width:446px;
-    margin-left: 52px;
-    margin-top: 35px;
-
+.line {
+  border-top: 1px solid #2F3E53;
+  width: 100%;
+  margin: 30px auto;
 }
 
 .passwdbtnregion {
-    display:flex;
-    width: 446px;
-    height: 39px;
-    margin-top: 35px;
-    margin-left:52px;
+  display: flex;
+  flex-direction: column; 
+  gap: 15px;
+  align-items: center;
+  width: 100%;
+}
+
+#esq, #dir {
+  width: 100%;
+  max-width: 211px;
+  background-color: #273549;
+  color: #55F991;
+  text-align: center;
+  padding: 12px;
+  border-radius: 5px;
+  font-size: 18px;
+  word-wrap: break-word;
+}
+
+/* Comportamento em telas maiores */
+@media (min-width: 600px) {
+  .passwdbtnregion {
+    flex-direction: row;
     justify-content: space-between;
+  }
 }
-
-#esq , #dir{
-    height: 36px;
-    width:211px;
-    background-color: #273549;
-    border-radius: 5px;
-    color:#55F991;
-    text-align: center;
-    padding-top:18px;
-    font-size: 18px;
-
-}
-
